--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -669,7 +669,7 @@ The next table shows the number of constraints covered by constraint languages a
 \emph{Expr(DSP)} (14) & 14 & 13 & 1 & 7(6) & 13 & 13(1) \\
 \emph{Expr(OWL2-DL)} & & & & & & \\
 \emph{Expr(OWL2-QL)} & & & & & & \\
-\emph{Expr(ReSh)} & & & & & & \\
+\emph{Expr(ReSh)} (12) & 7 & 9(2) & 1(1) & 12 & 11 & 11(1) \\
 \emph{Expr(ShEx)} & & & & & & \\
 \emph{Expr(SPIN)} & & & & & & \\
 \end{evaluation}
@@ -679,7 +679,7 @@ The table implies the expressivity classes' partial orderings:
 \emph{Expr(DSP):} DSP \succ SPIN \succ OWL2-DL \succeq ShEx \succ ReSh \succ OWL2-QL \\ 
 \emph{Expr(OWL2-DL):} \\
 \emph{Expr(OWL2-QL):} \\
-\emph{Expr(ReSh):} \\
+\emph{Expr(ReSh):} ReSh \succ SPIN \succ ShEx \succ OWL2-DL \succ DSP \succ OWL2-QL \\
 \emph{Expr(ShEx):} \\
 \emph{Expr(SPIN):} \\ 
 \end{eqnarray*}
