--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -852,16 +852,17 @@ The only well adopted and therefore well known constraint languages are SPIN and
 	%\label{fig:expressivity-complexity}
 %\end{figure}
 \textcolor{red}{needs modification}
+\tb{do we need this section? do we need a figure?}
 
 We assigned the five most promising constraint languages to two expressivity, and to four complexity classes.
-Expressivity and complexity classes can be combined in a diagram (see figure Figure~\ref{fig:expressivity-complexity}).
+%Expressivity and complexity classes can be combined in a diagram (see figure Figure~\ref{fig:expressivity-complexity}).
 
-\begin{figure}
-	\centering
-		\includegraphics[width=0.95\textwidth]{complexiity_and_expressivity.png}
-	\caption{Complexity and Expressivity Classes}
-	\label{fig:expressivity-complexity}
-\end{figure}
+%\begin{figure}
+	%\centering
+		%\includegraphics[width=0.95\textwidth]{complexiity_and_expressivity.png}
+	%\caption{Complexity and Expressivity Classes}
+	%\label{fig:expressivity-complexity}
+%\end{figure}
 
 It depends on the individual use case, which constrains are needed to express and therefore which constraint language to choose.
 %As a consequence, you may select a constraint language which is not the most expressive one within one specific expressivity class, 
@@ -869,8 +870,8 @@ It depends on the individual use case, which constrains are needed to express an
 If, for instance, reasoning should not be performed and three particular constraints should be covered by the constraint language.
 Even if the absolute expressivity (\ms{Expr-C}) of SPIN is much higher than the one of ShEx (\ms{Expr-C}(ShEx) $\subset$ \ms{Expr-C}(SPIN)) 
 , the relative expressivity of this expressivity class could be the same for ShEx and SPIN - in case the three constraints are covered by both.
-\er{The expressivity here (in figure) is not constraint specific expressivity, it is more general. However, constraint specific expressivity must follow.}
-\tb{we need to create a new figure}
+%\er{The expressivity here (in figure) is not constraint specific expressivity, it is more general. However, constraint specific expressivity must follow.}
+%\tb{we need to create a new figure}
 %Now, the user-friendliness classes comes into play:
 %\begin{eqnarray*}
 %\ms{UF-L}(SPIN) \subset \ms{UF-L}(ShEx), \ms{UF-I}(SPIN) \subset \ms{UF-I}(ShEx) \\
