objectives and audience

--- a/paper/ESWC 2015 Tutorial/ESWC2015Tutorial.tex
+++ b/paper/ESWC 2015 Tutorial/ESWC2015Tutorial.tex
@@ -253,6 +253,10 @@ We addressed more than ten mailing lists from the Linked Data and the DDI commun
 We are planning to officially publish Disco after three years of development in the first half of the year 2015 after an additional official technical review of the DDI Alliance\footnote{\url{http://www.ddialliance.org/}}.
 
 \subsection{Objectives of the Tutorial} 
+The domain-specific origin of Disco increases the difficulties for adopting it by developers who are not familiar with the domain. However, person-level metadata is not restricted to a particular domain and may be an interesting data source for Linked Data developers. Hence, as our main objective, we want to provide assistence for creating such complex Linked Data sets using Disco. Because of the complexity, we especially want to demonstrate how Disco data sets can be connected with information represented using other existing vocabularies that are relevant in that context. Vice verse, we show how these other vocabualries and data represented with such can benefit from the interplay with Disco.
+
+Another objective of the tutorial is to share our experience in developing a RDF vocabulary out of an existing and highly-complex domain-specific data model. We provide insight into the development and engineering process for creating Disco.
+Finally, since Disco is already being adopted in the DDI community, we aim to increase the use of Disco in the Linked Data community.
 
 \subsection{Relevance to ESWC 2015}
 In this tutorial, the DDI-RDF Discovery vocabulary (Disco) and its interplay with other existing vocabularies is introduced. In contrast to other newly developed vocabularies that can be adopted easily by Linked Data experts in most cases, the complexity of Disco is higher because of its domain-specific origin and the tight interplay with other existing vocabularies. This makes Disco more difficult to be adopted by Linked Data experts that may not be familiar with the domain-specific background of person-level micro data. However, since the number of organizations that aim to publish their complex data as Linked Data grows and the number of researchers that want to conduct their research with real-world data grows, a tutorial on representing such highly complex and inter-connected data sets may be a beneficial addition for the audience of ESWC 2015.
@@ -267,7 +271,7 @@ We will extend slides of a previous tutorial\footnote{tutorial slides avaliable 
 and where appropriate refer to the current Disco specification\footnote{current specification is available at \url{https://github.com/linked-statistics/disco-spec}}.
 
 \subsection{Intended Audiences}
-Linked Data experts that are interested in modelling and publishing complex and highly inter-connected data sets as Linked Data.
+The intended audience of this tutorial are Linked Data developers - beginners as well as experts - who are interested in modelling and publishing complex and highly inter-connected data sets as Linked Data. Since the connection with other vocabulaires like QB, DCAT and PROV-O plays a major role in this context, the tutorial is not restricted to participants who are interested in person-level micro data.
 
 \subsection{Learning Objectives}
 The learning objectives of this tutorial are the following:
@@ -295,7 +299,7 @@ At the ESWC conference, the second part of our audience - Linked Data experts - 
 
 %short bios of the presenters, including previous training and public speaking experience (e.g., teaching in English, conference presentations, tutorials etc.)
 
-Thomas Bosch\footnote{\url{http://boschthomas.blogspot.com}} studies information systems, holds a degree in Computer Science (M.Sc.), and is currently a PhD student.
+Thomas Bosch\footnote{\url{http://boschthomas.blogspot.com}} studied information systems, holds a degree in Computer Science (M.Sc.), and is currently a PhD student.
 His research topic is all about RDF validation.
 More specifically, he investigates how to validate any RDF constraints (formulated by multiple constraint languages) and how to express them generically. 
 He held multiple presentations at international conferences and workshops (e.g. WWW, ISWC, DC, Dagstuhl seminars). 
