--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -611,6 +611,7 @@ We evaluated the five most popular constraint languages on fulfilling each requi
 We also evaluated if a specific requirement is covered by OWL 2 QL or the more expressive OWL 2 DL is needed \cite{BoschNolleAcarEckert2015}.
 In this section, we determine the expressivity of constraint languages in terms of classical computer science expressivity classes as well as an expressivity score on reasoning.
 As we identified three constraint-specific complexity classes in the previous section, we are now able to determine the performance (i.e. complexity) of constraint languages. 
+It can be beneficial not using the most expressive constraint languages when additional rather subjective criteria are evaluated.
 
 \subsection{Expressivity}
 
@@ -684,7 +685,7 @@ The table implies the expressivity classes' partial orderings:
 \emph{Expr(OWL2QL):} DSP \prec ReSh \prec ShEx \prec SPIN \prec OWL2DL \preceq OWL2QL \\
 \emph{Expr(ReSh):} OWL2QL \prec DSP \prec OWLDL \prec ShEx \prec SPIn \prec ReSh \\
 \emph{Expr(ShEx):} OWL2QL \prec ReSh \prec DSP \prec OWL2DL \prec SPIN \prec ShEx \\
-\emph{Expr(SPIN):} ReSh \prec DSP \prec OWL2QL \prec ShEx \prec OWL2DL \prec SPIN \\
+\emph{Expr(SPIN):} ReSh \prec DSP \prec OWL2QL \prec ShEx \prec OWL2DL \prec SPIN
 \end{eqnarray*}
 
 %\subsection{Classification Dimension Expressivity [Old]}
@@ -783,16 +784,16 @@ Partial (not necessarily total) orderings according to the total number of const
 %\mathcal{C}_R ^{\mathcal{DL}}: OWL2-QL \subset DSP \subset ShEx \subset ReSh \subset SPIN \subseteq OWL2-DL \\
 %\mathcal{C}_R \backslash \mathcal{C}_R ^{\mathcal{DL}}: OWL2-QL \subseteq OWL2-DL \subset DSP \subset ReSh \subseteq ShEx \subset SPIN \\
 \mathcal{C}_R \equiv \mathcal{C}_R ^{\mathcal{DL}}: DSP \subset OWL2-QL \subset ShEx \subset ReSh \subset SPIN \subseteq OWL2-DL \\
-\overline{\mathcal{C}_R}: DSP \subset OWL2-QL \subset ReSh \subset ShEx \subset OWL2-DL \subset SPIN \\
+\overline{\mathcal{C}_R}: DSP \subset OWL2-QL \subset ReSh \subset ShEx \subset OWL2-DL \subset SPIN
 %\mathcal{C}: DSP \subset OWL2-QL \subset ReSh \subset ShEx \subset OWL2-DL \subset SPIN
 \end{eqnarray*}
 
 \subsection{Additional Criteria}
 
-SPIN is the most expressive constraint language for the two expressivity classes \ms{Expr-C} and \ms{Expr-R}.
+SPIN is the most expressive constraint language (regarding both expressivity scores $Expr(\overline{\mathcal{C}_R})$ and $Expr(\mathcal{C}_R)$).
 It can be beneficial, however, to use other constraint languages to meet particular use cases when additional rather subjective criteria are evaluated.
 
-\ms{User-friendliness} is one dimension of these criteria.
+\emph{User-friendliness} is one dimension of these criteria.
 We cannot formally measure the user-friendliness of constraint languages as in the case of expressivity and complexity. 
 %Rather subjective criteria to determine the degree of user-friendliness of constraint languages lead to four user-friendliness classes of constraint languages:
 %
@@ -803,13 +804,13 @@ We cannot formally measure the user-friendliness of constraint languages as in t
 	%\item \ms{UF-A} (adoption): less adopted (\ding{55}) $<$ well adopted ($\checkmark$)
 %\end{itemize}
 Rather subjective criteria to determine the degree of user-friendliness of constraint languages are 
-constraint formulation level, intuitiveness, conciseness, and adoption.
-SPIN is in contrast to the other constraint languages a general-purpose low-level language, as it is the most expressive one (constraint formulation level).
+\emph{constraint formulation level}, \emph{intuitiveness}, \emph{conciseness}, and \emph{adoption}.
+SPIN is in contrast to other constraint languages a general-purpose low-level language, as it is the most expressive one (\emph{constraint formulation level}).
 As SPARQL queries may be very long and complex, the purpose of constraints expressed in SPIN may not be immediately clear to human readers.
 On the other side, ShEx is the most intuitive constraint language, since it is based on regular expressions and since well-known constructs of other languages\footnote{e.g. numbers standing for min, max, and exact cardinality in UML} are part of the language definition.
-DSP, ReSh, as well as OWL 2 are not that intuitive than ShEx, but more intuitive to humans than SPIN\footnote{see, e.g., the requirement \ms{allowed values} in the paper of Bosch et al. \cite{BoschNolleAcarEckert2015}\label{footnoteIntuitivenessConciseness}} (intuitiveness).
-In most cases, the same constraints can be expressed more concise in OWL 2 and ShEx than in DSP and SPIN\footref{footnoteIntuitivenessConciseness} (conciseness).
-The only well adopted and therefore well known constraint languages are SPIN and most of all OWL 2 (adoption).
+DSP, ReSh, as well as OWL 2 are not that intuitive than ShEx, but more intuitive to humans than SPIN\footnote{see, e.g., the requirement \ms{allowed values} in the paper of Bosch et al. \cite{BoschNolleAcarEckert2015}\label{footnoteIntuitivenessConciseness}} (\emph{intuitiveness}).
+In most cases, the same constraints can be expressed more concise in OWL 2 and ShEx than in DSP and SPIN\footref{footnoteIntuitivenessConciseness} (\emph{conciseness}).
+The only well adopted and therefore well known constraint languages are SPIN and most of all OWL 2 (\emph{adoption}).
 
 %These user-friendliness classes could also be evaluated more fine granular for each constraint (and not only for each constraint language).
 %Tools could then recommend for each user-friendliness class or in total which constraint language to use in order to express a particular constraint or sets of constraints. 
